--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,13 @@
 body {
   margin: 0;
-  height: 100vh;
-  background-color: #121213;
-  color: #ffffff;
-  font-family: sans-serif;
-}
-
-h1 {
-  margin: 0;
-}
-
-h2 {
-  margin-bottom: 1.5rem;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, monospace;
-}
-
-#root {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  height: 100%;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
